
[tool.poetry]
name = "dapr_httpx"
version = "0.1.8"
description = "✨dapr ➕ ✨httpx is awesome"
authors = ["Ben <moon791017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
