
[tool.poetry]
name = "dapr_httpx"
version = "0.2.6"
description = "✨dapr ➕ ✨httpx is awesome"
authors = ["Ben <moon791017@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/Benknightdark/dapr-helpers"
repository = "https://github.com/Benknightdark/dapr-helpers"
documentation = "https://github.com/Benknightdark/dapr-helpers"
keywords = ["dapr","httpx"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
